# allocated-btree

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
examples/: count-allocations.rs  memory-comparison.rs  wrapper-demo.rs
src/: btree.rs  common.rs  compressed.rs  lib.rs
src/btree/: entry.rs  iters.rs  node.rs  tests.rs  wrapper.rs
src/btree/node/: entry.rs  iter.rs
src/compressed/: entry.rs  iters.rs  node.rs  tests.rs  wrapper.rs
src/compressed/node/: child_ptr.rs  entry.rs  interior_node.rs  iter.rs  leaf_node.rs  node_ref.rs
